# darwin-rebuild-rs

./: .clippy.toml  .envrc  .gitignore  Cargo.toml  flake.nix  result  rust-toolchain.toml
assets/: flake.nix
src/: build_runner.rs  cli.rs  command.rs  initialize_panic_handler.rs  logging.rs  logging_debug.rs  main.rs  nix_commands.rs
src/runner/: mod.rs  nix_darwin_action.rs  nix_darwin_runner.rs  runnable.rs
