[package]
name = "darwin-rebuild"
version = "0.1.0"
edition = "2021"
description = ""

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.8", features = ["derive"] }
clap_complete = "4"
color-eyre = "0.6.3"
gethostname = "0.5.0"
human-panic = "2.0.0"
libc = "0.2.155"
log = "0.4.22"
pretty_env_logger = "0.5.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
strip-ansi-escapes = "0.2.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
mockall = "0.12"
test-log = "0.2"
