[package]
name = "darwin-rebuild"
version = "0.1.0"
edition = "2021"
description = ""

[dependencies]
anstyle = "1.0.7"
better-panic = "0.3.0"
clap = { version = "4.5.8", features = ["color", "derive", "env"] }
clap_complete = "4"
color-eyre = "0.6.3"
gethostname = "0.5.0"
human-panic = "2.0.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
strip-ansi-escapes = "0.2.0"
subprocess = "0.2.9"
tempfile = "3.10.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
    "std",
] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
mockall = "0.12"
test-log = "0.2"
